...
    <string name="status_used">Used</string>
    <string name="status_expired">Expired</string>
    <string name="invitations_loading">Loading Invitations</string>
    <string name="invitations_creating">Creating Invitations</string>
    <string name="error_inserting_invitation">Error inserting invitation</string>
    <string name="error_loading_invitations">Failed to load invitations</string>
    <string name="error_invitation_not_found">Invitation not found</string>
    <string name="error_deleting_invitations">Failed to delete invitation</string>
    <string name="enter_invitation_code">Enter invitation code</string>
    <string name="join_button_text">Join</string>
    <string name="error_invitation_with_code_not_found">No invitation found such code".</string>
    <string name="error_invitation_already_used">This invitation has already been used.</string>
    <string name="error_invitation_expired">This invitation has expired.</string>
...
